--- a/debian/rules
+++ b/debian/rules
@@ -12,8 +12,7 @@ export DEB_BUILD_OPTIONS=nocheck
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
-	  --with-ffmpeg=$(LIBDIR_MULTIARCH) \
-	  --without-optimizecpu
+	  --with-ffmpeg=$(LIBDIR_MULTIARCH) 
 
 override_dh_auto_install:
 	dh_auto_install
